--- a/.github/workflows/discord-webhook.yml
+++ b/.github/workflows/discord-webhook.yml
@@ -10,6 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get changed files
+        id: changed_files
+        run: |
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+          echo "Changed files: $CHANGED_FILES"
+          echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
+
       - name: Send notification to Discord
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
@@ -20,7 +30,7 @@ jobs:
             "embeds": [
               {
                 "title": "📢 New Update!",
-                "color": 16776960, 
+                "color": 16776960,
                 "fields": [
                   {
                     "name": "📂 Repository",
@@ -41,9 +51,15 @@ jobs:
                     "name": "📝 Commit Message",
                     "value": "${{ github.event.head_commit.message }}",
                     "inline": false
+                  },
+                  {
+                    "name": "🗂 Changed Files",
+                    "value": "${{ env.CHANGED_FILES }}",
+                    "inline": false
                   }
                 ]
               }
             ]
           }' \
           $DISCORD_WEBHOOK
+
